@@ -1,12 +1,12 @@
 package dev.dubhe.anvilcraft.item;
 
 import com.google.common.collect.Streams;
+import dev.anvilcraft.lib.v2.util.InventoryUtil;
 import dev.dubhe.anvilcraft.block.BlockDevourerBlock;
 import dev.dubhe.anvilcraft.init.block.ModBlockTags;
 import dev.dubhe.anvilcraft.init.item.ModComponents;
 import dev.dubhe.anvilcraft.init.item.ModItems;
 import dev.dubhe.anvilcraft.util.BreakBlockUtil;
-import dev.dubhe.anvilcraft.util.InventoryUtil;
 import dev.dubhe.anvilcraft.util.MultiPartBlockUtil;
 import it.unimi.dsi.fastutil.ints.IntIterators;
 import it.unimi.dsi.fastutil.ints.IntListIterator;
@@ -24,6 +24,7 @@ import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.Rarity;
+import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.DoublePlantBlock;
@@ -138,6 +139,12 @@ public class DragonRodItem extends Item {
             devouringState = level.getBlockState(devouringPos);
 
             if (!player.getAbilities().instabuild) {
+                int expCount = EnchantmentHelper.processBlockExperience(
+                    level,
+                    dragonRod,
+                    devouringState.getExpDrop(level, devouringPos, level.getBlockEntity(devouringPos), player, dragonRod)
+                );
+                player.giveExperiencePoints(expCount);
                 List<ItemStack> dropList = BreakBlockUtil.dropWithTool(level, devouringPos, dragonRod);
                 Inventory inventory = player.getInventory();
                 for (ItemStack drop : dropList) {
@@ -207,7 +214,7 @@ public class DragonRodItem extends Item {
             case 9 -> 4;
             default -> 0;
         };
-        return Math.min(damage, Math.max(dragonRod.getMaxDamage() - dragonRod.getDamageValue(), 1));
+        return Math.clamp(dragonRod.getMaxDamage() - dragonRod.getDamageValue(), 1, damage);
     }
 
     public static int calculateCooldown(Player player) {
